--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.12.0",
     "react-live": "^4.1.7",
+    "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
