--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^10.0.6",
     "recharts": "^2.12.1",
     "web-vitals": "^2.1.4"
   },
